# ros-line-follower

./: .gitignore
install/: local_setup.sh  setup.sh
install/robot_dsc/share/robot_dsc/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_dsc/share/robot_dsc/cmake/: robot_dscConfig-version.cmake  robot_dscConfig.cmake
install/robot_dsc/share/robot_dsc/environment/: ament_prefix_path.dsv  path.dsv
install/robot_dsc/share/robot_dsc/urdf/: diff_drive.urdf.xacro
install/test_py_pkg/lib/test_py_pkg/: simple_publisher
install/test_py_pkg/share/test_py_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/line_follower_controller/: package.xml  setup.py
src/line_follower_controller/line_follower_controller/: line_follower_node.py
src/line_follower_pkg/: package.xml  setup.py
src/line_follower_pkg/launch/: line_follower.launch.py
src/line_follower_pkg/line_follower_pkg/: line_follower_node.py
src/pid_line_follower/: package.xml  setup.cfg  setup.py
src/pid_line_follower/launch/: pid_line_follower.launch.py
src/pid_line_follower/pid_line_follower/: pid_line_follower.py
src/robot_dsc/: CMakeLists.txt  debug_subscriber.py  package.xml
src/robot_dsc/launch/: spawn_robot_in_gazebo.launch.py
src/robot_dsc/urdf/: diff_drive.urdf.xacro
src/robot_dsc/worlds/: line_follower_world.world  line_follower_world_v2.world
src/test_py_pkg/: package.xml  setup.py
src/test_py_pkg/test_py_pkg/: simple_publisher.py
(+4 files in other folders)
